fixed text overflow

--- a/src/styles/modalStyles/aboutP.css
+++ b/src/styles/modalStyles/aboutP.css
@@ -1,5 +1,5 @@
 .modalAbtPro{
-    width: 100%;
+    width: auto;
     max-height: 100%;
     margin-left: 2rem;
 }
